tests/pos/simple/top-00.ts

/*@ foo :: () => { top | 0 < 1 } */
function foo ():number {  
  return 1;
}

